==> QPALZM10290/-stm32-/System/Timer.c <==
#include "stm32f10x.h"                  // Device header


uint8_t Clock_num = 0;
uint8_t Num[3];
uint8_t TIM_num = 0;

/**
  * 函    数：定时中断初始化
  * 参    数：无
  * 返 回 值：无
  */
void Timer_Init(void)
{
	/*开启时钟*/
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);			//开启TIM2的时钟
	
	/*配置时钟源*/
	TIM_InternalClockConfig(TIM2);		//选择TIM2为内部时钟，若不调用此函数，TIM默认也为内部时钟
	
	/*时基单元初始化*/
	TIM_TimeBaseInitTypeDef TIM_TimeBaseInitStructure;				//定义结构体变量
	TIM_TimeBaseInitStructure.TIM_ClockDivision = TIM_CKD_DIV1;		//时钟分频，选择不分频，此参数用于配置滤波器时钟，不影响时基单元功能
	TIM_TimeBaseInitStructure.TIM_CounterMode = TIM_CounterMode_Up;	//计数器模式，选择向上计数
	TIM_TimeBaseInitStructure.TIM_Period =  100;				//计数周期，即ARR的值
	TIM_TimeBaseInitStructure.TIM_Prescaler =  7200 - 1;				//预分频器，即PSC的值
	TIM_TimeBaseInitStructure.TIM_RepetitionCounter = 0;			//重复计数器，高级定时器才会用到
	TIM_TimeBaseInit(TIM2, &TIM_TimeBaseInitStructure);				//将结构体变量交给TIM_TimeBaseInit，配置TIM2的时基单元	
	
	/*中断输出配置*/
	TIM_ClearFlag(TIM2, TIM_FLAG_Update);						//清除定时器更新标志位
																//TIM_TimeBaseInit函数末尾，手动产生了更新事件
																//若不清除此标志位，则开启中断后，会立刻进入一次中断
																//如果不介意此问题，则不清除此标志位也可
	
	TIM_ITConfig(TIM2, TIM_IT_Update, ENABLE);					//开启TIM2的更新中断
	
	/*NVIC中断分组*/
	
	
	/*NVIC配置*/
	NVIC_InitTypeDef NVIC_InitStructure;						//定义结构体变量
	NVIC_InitStructure.NVIC_IRQChannel = TIM2_IRQn;				//选择配置NVIC的TIM2线
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;				//指定NVIC线路使能
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;	//指定NVIC线路的抢占优先级为2
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;			//指定NVIC线路的响应优先级为1
	NVIC_Init(&NVIC_InitStructure);								//将结构体变量交给NVIC_Init，配置NVIC外设
	

}

void Timer_TM3_Init(void)
{
/* 开启时钟 */
RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM3, ENABLE);			// 开启TIM3的时钟

/* 配置时钟源 */
TIM_InternalClockConfig(TIM3);		// 选择TIM3为内部时钟，若不调用此函数，TIM默认也为内部时钟

/* 时基单元初始化 */
TIM_TimeBaseInitTypeDef TIM_TimeBaseInitStructure;				// 定义结构体变量
TIM_TimeBaseInitStructure.TIM_ClockDivision = TIM_CKD_DIV1;		// 时钟分频，选择不分频，此参数用于配置滤波器时钟，不影响时基单元功能
TIM_TimeBaseInitStructure.TIM_CounterMode = TIM_CounterMode_Up;	// 计数器模式，选择向上计数
TIM_TimeBaseInitStructure.TIM_Period =  359;				// 计数周期，即ARR的值
TIM_TimeBaseInitStructure.TIM_Prescaler =  1999;				// 预分频器，即PSC的值
TIM_TimeBaseInitStructure.TIM_RepetitionCounter = 0;			// 重复计数器，高级定时器才会用到
TIM_TimeBaseInit(TIM3, &TIM_TimeBaseInitStructure);				// 将结构体变量交给TIM_TimeBaseInit，配置TIM3的时基单元	

/* 中断输出配置 */
TIM_ClearFlag(TIM3, TIM_FLAG_Update);						// 清除定时器更新标志位

TIM_ITConfig(TIM3, TIM_IT_Update, ENABLE);					// 开启TIM3的更新中断

/* NVIC中断配置 */
NVIC_InitTypeDef NVIC_InitStructure;						// 定义结构体变量
NVIC_InitStructure.NVIC_IRQChannel = TIM3_IRQn;				// 选择配置NVIC的TIM3线
NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;				// 指定NVIC线路使能
NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;	// 指定NVIC线路的抢占优先级为2
NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;			// 指定NVIC线路的响应优先级为1
NVIC_Init(&NVIC_InitStructure);								// 将结构体变量交给NVIC_Init，配置NVIC外设

/* TIM使能 */
TIM_Cmd(TIM3, ENABLE);			// 使能TIM3，定时器开始运行
}

//定时器中断函数，可以复制到使用它的地方
void TIM2_IRQHandler(void)
{
	if (TIM_GetITStatus(TIM2, TIM_IT_Update) == SET)
	{
		TIM_num++;
		if(TIM_num == 100)
		{
     Clock_num++;
			TIM_num = 0;
		}
		
		TIM_ClearITPendingBit(TIM2, TIM_IT_Update);			//清除TIM2更新事件的中断标志位

	}
}

void TIM3_IRQHandler(void)
{
	if (TIM_GetITStatus(TIM3, TIM_IT_Update) == SET)
	{
 
		TIM_ClearITPendingBit(TIM3, TIM_IT_Update);			//清除TIM2更新事件的中断标志位

	}
}

void Clock_num_trans(void)
{
	Num[0] = Clock_num / 3600;
	Num[1] = (Clock_num % 3600)/60;
	Num[2] = Clock_num % 60;
}
